--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Start: These links allow the app to directly use the existing css and text styles without implementing it directly in the css/less file. -->
   <link rel="stylesheet" href="//demo.productionready.io/main.css" type="text/css">
   <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" type="text/css">
   <link
@@ -13,6 +14,7 @@
     href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
     type="text/css"
   >
+  <!-- End: These links allow the app to directly use the existing css and text styles without implementing it directly in the css/less file. -->
 </head>
 <body>
   <app-root></app-root>
